# surfex

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md  Tickets.md  install.sh  uninstall.sh
LICENSES/: GLAD-MIT.txt  KHRONOS-khrplatform.txt  README.md
examples/: test.py
include/: Axis.h  Camera.h  Grid.h  Mesh.h  OpenGLUtils.h  Shader.h  Surfex.h
include/glad/: glad.h
python/surfex/: __init__.py  api.py
python/surfex/shaders/: surface.frag  surface.vert
scripts/: check_surfex_install.py  install.py  installer_common.py  uninstall.py
src/: Axis.cpp  Camera.cpp  Grid.cpp  Mesh.cpp  OpenGLUtils.cpp  Shader.cpp  Surfex.cpp  core.cpp  glad.c  main.cpp
tests/: check_surfex_install.py  test_smoke.py
